# SpotifyOOP

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  disable_modules.props  launcher.command  main.cpp  melodii.txt  state.txt
.github/actions/cppcheck/: action.yml
.github/actions/install-packages/: action.yml
.github/workflows/: cmake.yml
cmake/: CompilerFlags.cmake  Options.cmake
docs/: Doxyfile
docs/html/: _album_8hpp_source.html  _artist_8hpp_source.html  _audio_file_8hpp_source.html  _check_directory_8hpp_source.html  _check_init_8hpp_source.html  _check_playing_8hpp_source.html  _exceptions_8hpp_source.html  _helper_8h_source.html  _player_8cpp.html  _player_8hpp_source.html  _playlist_8cpp.html  _playlist_8hpp_source.html  _song_8cpp.html  _song_8hpp_source.html  annotated.html  class_album-members.html  class_album.html  class_artist-members.html  class_artist.html  class_audio_exceptions-members.html  class_audio_exceptions.html  class_audio_file-members.html  class_audio_file.html  class_f_l_a_c-members.html  class_f_l_a_c.html  class_helper-members.html  class_helper.html  class_m_p3-members.html  class_m_p3.html  class_o_g_g-members.html  class_o_g_g.html  class_player-members.html  class_player.html  class_playlist-members.html  class_playlist.html  class_song-members.html  class_song.html  classcheck__init-members.html  classcheck__init.html  classcheck__playing-members.html  (+33 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  pages_1.js  pages_2.js  related_0.js  (+1 more)
docs/latex/: _album_8hpp_source.tex  _artist_8hpp_source.tex  _audio_file_8hpp_source.tex  _check_directory_8hpp_source.tex  _check_init_8hpp_source.tex  _check_playing_8hpp_source.tex  _exceptions_8hpp_source.tex  _helper_8h_source.tex  _player_8cpp.tex  _player_8hpp_source.tex  _playlist_8cpp.tex  _playlist_8hpp_source.tex  _song_8cpp.tex  _song_8hpp_source.tex  annotated.tex  class_album.tex  class_artist.tex  class_audio_exceptions.eps  class_audio_exceptions.tex  class_audio_file.eps  class_audio_file.tex  class_f_l_a_c.eps  class_f_l_a_c.tex  class_helper.tex  class_m_p3.eps  class_m_p3.tex  class_o_g_g.eps  class_o_g_g.tex  class_player.tex  class_playlist.tex  class_song.tex  classcheck__init.eps  classcheck__init.tex  classcheck__playing.eps  classcheck__playing.tex  classis__not__directory.eps  classis__not__directory.tex  env__fixes_8h_source.tex  files.tex  flac_8hpp_source.tex  (+6 more)
headers/: Album.hpp  Artist.hpp  AudioFile.hpp  CheckDirectory.hpp  CheckInit.hpp  CheckPlaying.hpp  Exceptions.hpp  LongestMediaFinder.hpp  Player.hpp  Playlist.hpp  SaveState.hpp  Song.hpp  flac.hpp  mp3.hpp  ogg.hpp  wav.hpp
packed/: index.js
scripts/: run_cppcheck.sh
src/: Album.cpp  Artist.cpp  AudioFile.cpp  CheckDirectory.cpp  CheckInit.cpp  CheckPlaying.cpp  Exceptions.cpp  LongestMediaFinder.tpp  Player.cpp  Playlist.cpp  SaveState.cpp  Song.cpp  flac.cpp  mp3.cpp  ogg.cpp  wav.cpp
